--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,12 +1,13 @@
 .hero{
     position: relative;
-    width: 100%;
-    height: 91vh;
+    width: 97%;
+    height: 50vh;
     overflow: hidden; /* hides any blur overflow */
-    margin: 0;
+    margin: 10px 20px;
     padding: 0;
     display: flex;
     flex-direction: row;
+    border-radius: 20px;
 }
 .blur-bg {
     position: absolute;
@@ -21,7 +22,7 @@
     width: 40%;
     text-align: left;
     justify-content: center;
-    margin-top: 15%;
+    margin-top: 5%;
     color: white;
     padding: 2rem;
     margin-left: 5px;
@@ -35,6 +36,9 @@
     font-size: 14px;
     font-weight: 600;
     border: 2px solid rgb(29, 54, 106);
+}
+.left-hero-container button:hover{
+    background: #f4f4f4;
 }
 .right-hero-container{
     position: relative;
