--- a/src/Components/MovieList/MovieList.css
+++ b/src/Components/MovieList/MovieList.css
@@ -1,17 +1,69 @@
-h1{
-    color: rgb(0, 0, 0);
-    font-size: 50px;
-    font-weight: 600;
-    margin-top: 20px;
+.movie-list-header{
+    padding: 10px 30px;
+    justify-content: space-between;
+    margin-bottom: 5px;
 }
-hr{
-    width: 200px;
-    height: 6px;
-    border-radius: 10px;
-    background: #cbcbcb;
+.movie-list-heading{
+    font-size: 26px;
+    color: var(--heading-color);
+}
+.movie-fliter{
+    list-style: none;
+    font-size: 16px;
+}
+.movie-filter-item{
+    padding: 5px 10px;
+    cursor: pointer;
+}
+.movie-filter-item.active{
+    border-bottom: 1px solid rgb(75, 75, 75);
+    font-weight: 500;
+}
+.movie-sorting{
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 500;
+    height: 30px;
+    padding: 0 5px;
+    margin: 0 10px;
 }
 .movie-cards{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+.load-more-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .load-more-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #2196f3;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+  }
+  
+  .load-more-button:hover {
+    background-color: #0d8ae3;
+  }
+  .movie-search-input {
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-right: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  .search-bar-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  
