--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
+  padding: 0;
   background-color: var(--body_background);
+  box-sizing: border-box;
   color: var(--body_color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,6 +12,7 @@ body {
 }
 *{
   transition: all 0.3s ease-in-out;
+  margin: 0;
 }
 :root{
   --body_background: #101010;
